[gd_scene load_steps=3 format=3 uid="uid://h4of0xy2lurm"]

[ext_resource type="Script" uid="uid://dnqcjidm00h62" path="res://Main.gd" id="1"]
[ext_resource type="Theme" uid="uid://bmngl6ar8axxa" path="res://assets/fonts/bmpfont.tres" id="3"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="TileLayer" type="CanvasLayer" parent="."]

[node name="ObjLayer" type="CanvasLayer" parent="."]

[node name="CrateLayer" type="CanvasLayer" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="LabelCaption" type="Label" parent="UILayer"]
offset_left = 328.0
offset_top = 160.0
offset_right = 504.0
offset_bottom = 189.0
theme = ExtResource("3")
text = "STAGE CLEAR"
horizontal_alignment = 1

[node name="LabelStep" type="Label" parent="UILayer"]
offset_left = 776.0
offset_top = 40.0
offset_right = 872.0
offset_bottom = 69.0
theme = ExtResource("3")
text = "STEP:0"

[node name="ResetButton" type="Button" parent="UILayer"]
offset_left = 776.0
offset_top = 88.0
offset_right = 864.0
offset_bottom = 122.0
theme = ExtResource("3")
text = "RESET"

[node name="UndoButton" type="Button" parent="UILayer"]
offset_left = 776.0
offset_top = 136.0
offset_right = 848.0
offset_bottom = 170.0
theme = ExtResource("3")
text = "UNDO"

[node name="RedoButton" type="Button" parent="UILayer"]
offset_left = 776.0
offset_top = 184.0
offset_right = 848.0
offset_bottom = 218.0
theme = ExtResource("3")
text = "REDO"

[connection signal="pressed" from="UILayer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="UILayer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="UILayer/RedoButton" to="." method="_on_RedoButton_pressed"]
